0.07002 TO BE RELEASED

    - Fix: Use MRO::Compat before mro to support perl 5.8
    
    - Fix: Date and ComboBox elements need to run deflators before trying to
      use any default value - reported by Matija Grabnar.

    - Overloading comparisons no longer assume both arguments are a blessed
      object - change needed for latest Test::More (Test-Simple-0.95_02)

0.07001 2010-05-16

    - No changes - cpan indexer failed for last release

0.07000 2010-05-16

    - Change of behaviour: default_args() values are now applied to any object
      inheriting from the specified type, rather than just an instance of that
      type. Old behaviour is still supported with a minor change, see docs for
      details. - patch from Daniel Hilton

    - New reverse_single attribute for all field elements.  New reverse_group
      attribute for Checkboxgroup and Radiogroup elements. (Ronald Kimball)

    - Allow empty string as default value for Date element. (Ronald Kimball)

    - Now use Clone instead of Storable (ntyni@iki.fi).

    - Change from Class::C3 to mro, to get built-in support in perl >= 5.9

    - New Bulgarian translation (Kamen Naydenov).

    - Fix bad links and markup in POD. (Ronald Kimball)

    - Fix spelling errors in POD (Ansgar Burchardt)

    - Bump Config::Any requirement to version 0.18 for YAML::XS support

0.06001 2010-01-08

    - Fixed issue with Model::HashRef where form fields with an underscore
      and overlapping name (e.g. 'foo' and 'foo_bar') were causing problems
    
    - Fix test suite year issue.

0.06000 2009-12-10

    - New get_parent() method that traverses the parent hierarchy, returning
      the first parent that matches the supplied options.
    
    - Date element, year menu now supports 'reverse' option to reverse order
      of year list. - patch from Ozum Eldogan.
    
    - New Element::Block method auto_block_id().
    
    - New only_on_reps() method for constraints on fields within a Repeatable